--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
     .zww {
         /* 设置元素在其父容器显示 */
-        margin: 30px;
+        margin: auto;
         /* 设置元素的边框为1像素宽,实线,颜色为半透明的白色 */
         border: 2px solid rgba(255, 255, 255, 0.5);
         /* 设置元素的盒子阴影效果,偏移量为0像素,模糊半径为12像素,颜色为白色 */
@@ -274,7 +274,7 @@
     }
 
     .zww h1 {
-        margin: 30px;
+        margin: auto;
         overflow: hidden;
         justify-content: center;
         align-items: center;
@@ -282,7 +282,7 @@
     }
 
     .zww h2 {
-        margin: 20px;
+        margin: auto;
         overflow: hidden;
         justify-content: center;
         align-items: center;
