--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
         /* 设置元素在其父容器显示 */
         margin: auto;
         /* 设置元素的边框为1像素宽,实线,颜色为半透明的白色 */
-        border: 2px solid rgba(255, 255, 255, 0.5);
+        /*border: 2px solid rgba(255, 255, 255, 0.5);*/
         /* 设置元素的盒子阴影效果,偏移量为0像素,模糊半径为12像素,颜色为白色 */
-        box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+        /*box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);*/
         /* 设置元素的边框圆角 */
         border-radius: 10px;
         /* 设置弹性布局中的元素在主轴（默认为水平方向）上居中对齐 */
@@ -274,7 +274,7 @@
     }
 
     .zww h1 {
-        margin: auto;
+        margin: 20px;
         overflow: hidden;
         justify-content: center;
         align-items: center;
@@ -282,7 +282,7 @@
     }
 
     .zww h2 {
-        margin: auto;
+        margin: 20px;
         overflow: hidden;
         justify-content: center;
         align-items: center;
