--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1 class="welcome">Welcome to ARKFUTURE</h1>
     <img class="logo" src="https://arkfuture.cn/ARKFUTURE/RES/sa.png">
     <p style="font-size: 12px;">您可以使用url中的#定位</p>
+    <p style="font-size: 12px;">请不要使用手机访问,页面会乱</p>
 
     <br>
 
@@ -254,7 +255,7 @@
 
     .zww {
         /* 设置元素在其父容器显示 */
-        margin: 10px;
+        margin: 20px;
         /* 设置元素的边框为1像素宽,实线,颜色为半透明的白色 */
         border: 2px solid rgba(255, 255, 255, 0.5);
         /* 设置元素的盒子阴影效果,偏移量为0像素,模糊半径为12像素,颜色为白色 */
@@ -268,7 +269,7 @@
     }
 
     .zww h1 {
-        margin: 10px;
+        margin: 20px;
         overflow: hidden;
         justify-content: center;
         align-items: center;
@@ -276,7 +277,7 @@
     }
 
     .zww h2 {
-        margin: 10px;
+        margin: 20px;
         overflow: hidden;
         justify-content: center;
         align-items: center;
@@ -284,8 +285,8 @@
     }
 
     .zww p {
-        margin: 10px;
-        white-space: pre;
+        margin: 20px;
+        white-space: nowrap;
         overflow: hidden;
         justify-content: center;
         align-items: center;
