--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     .zww p {
         margin: 20px;
-        white-space: nowrap;
+        white-space: pre;
         overflow: hidden;
         justify-content: center;
         align-items: center;
