--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         white-space: pre;
         overflow: hidden;
         justify-content: center;
-        align-items: center;
+        align-items: left;
     }
 </style>
 
