--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <h1 class="welcome">Welcome to ARKFUTURE</h1>
     <img class="logo" src="https://arkfuture.cn/ARKFUTURE/RES/sa.png">
     <p style="font-size: 12px;">您可以使用url中的#定位</p>
-    <p style="font-size: 12px;">请不要使用手机访问,页面会乱</p>
 
     <br>
 
@@ -294,8 +293,21 @@
 
 
     @media screen and (max-width: 768px) {
-    .zww {
-        width: 100%;
+        body {
+            background: var(--main-bg-color, linear-gradient(50deg, #7dc4cc, #bc95c6));
+        }
+        .zww {
+            margin: 20px
+        }
+        .zww h1 {
+            margin: 20px
+        }
+        .zww h2 {
+            margin: 20px
+        }
+        .zww p {
+            margin: 20px
+        }
     }
 </style>
 
