--- a/index.html
+++ b/index.html
@@ -297,16 +297,44 @@
             background: var(--main-bg-color, linear-gradient(50deg, #7dc4cc, #bc95c6));
         }
         .zww {
-            margin: 20px
+        /* 设置元素在其父容器显示 */
+        margin: 20px;
+        /* 设置元素的边框为1像素宽,实线,颜色为半透明的白色 */
+        border: 2px solid rgba(255, 255, 255, 0.5);
+        /* 设置元素的盒子阴影效果,偏移量为0像素,模糊半径为12像素,颜色为白色 */
+        box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+        /* 设置元素的边框圆角 */
+        border-radius: 10px;
+        /* 设置弹性布局中的元素在主轴（默认为水平方向）上居中对齐 */
+        justify-content: center;
+        /* 设置元素的所有属性变化时的过渡效果,持续时间为0.5秒 */
+        transition: all 0.5s;
         }
         .zww h1 {
-            margin: 20px
+            margin: 20px;
+            overflow: hidden;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-size: 10px;
         }
+
         .zww h2 {
-            margin: 20px
+            margin: 20px;
+            overflow: hidden;
+            justify-content: center;
+            align-items: center;
+            text-align: left;
+            font-size: 10px;
         }
+
         .zww p {
-            margin: 20px
+            margin: 20px;
+            white-space: pre;
+            overflow: hidden;
+            justify-content: center;
+            align-items: left;
+            font-size: 10px;
         }
     }
 </style>
