--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            font-size: 7px;
+            font-size: 30%;
         }
 
         .zww h2 {
@@ -307,7 +307,7 @@
             justify-content: center;
             align-items: center;
             text-align: left;
-            font-size: 7px;
+            font-size: 30%;
         }
 
         .zww p {
@@ -316,7 +316,7 @@
             overflow: hidden;
             justify-content: center;
             align-items: left;
-            font-size: 5px;
+            font-size: 30%;
         }
     }
 </style>
