--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     }
 
     .welcome {
-        margin: 30px;
+        margin: 70%;
         font-size: 30px;
         text-align: center;
     }
@@ -272,6 +272,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+        margin: 70%;
     }
 
     .zww h2 {
@@ -280,6 +281,7 @@
         justify-content: center;
         align-items: center;
         text-align: left;
+        margin: 60%;
     }
 
     .zww p {
@@ -288,37 +290,10 @@
         overflow: hidden;
         justify-content: center;
         align-items: left;
+        margin: 50%;
     }
 
 
-    @media screen and (max-width: 768px) {
-        .zww h1 {
-            margin: 20px;
-            overflow: hidden;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            font-size: 30%;
-        }
-
-        .zww h2 {
-            margin: 20px;
-            overflow: hidden;
-            justify-content: center;
-            align-items: center;
-            text-align: left;
-            font-size: 30%;
-        }
-
-        .zww p {
-            margin: 20px;
-            white-space: pre;
-            overflow: hidden;
-            justify-content: center;
-            align-items: left;
-            font-size: 30%;
-        }
-    }
 </style>
 
 <!-------------JS------->
