--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     }
 
     .welcome {
-        margin: 70%;
+        margin: 50px;
         font-size: 30px;
         text-align: center;
     }
@@ -272,7 +272,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        margin: 70%;
+        font-size: 1.7vw;
     }
 
     .zww h2 {
@@ -281,7 +281,7 @@
         justify-content: center;
         align-items: center;
         text-align: left;
-        margin: 60%;
+        font-size: 1.7vw;
     }
 
     .zww p {
@@ -290,9 +290,13 @@
         overflow: hidden;
         justify-content: center;
         align-items: left;
-        margin: 50%;
+        font-size: 1.7vw;
     }
 
+    @media screen and (max-width: 768px) {
+        body {
+            background: var(--main-bg-color, linear-gradient(50deg, #7dc4cc, #bc95c6));
+        }
 
 </style>
 
