--- a/index2.html
+++ b/index2.html
@@ -3144,12 +3144,10 @@ hue-6-2: #c18401
 .hljs-link {
   text-decoration: underline;
 }</style>
-						<title>ARKFUTURE</title>
+						<title></title>
 					</head>
 					<body>
-						<div class="exported-note"><div class="exported-note-title">ARKFUTURE</div>
-
-<style>
+						<div class="exported-note"><style>
 		/* https://necolas.github.io/normalize.css/ */
 		html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 		article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}
@@ -3690,7 +3688,7 @@ hue-6-2: #c18401
 				}
 				.mermaid-export-graph > button:hover {
 					background-color: #CBDAF1 !important;
-				}</style><div id="rendered-md"><h1 id="arkfuture">ARKFUTURE</h1>
+				}</style><div id="rendered-md"><h1 id=""></h1>
 <h2 id="welcome-to-arkfuture">Welcome to ARKFUTURE</h2>
 <ul>
 <li>技术无止，勇于创新/以史为镜，洞察未来</li>
