--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           a:hover {
             color: #0072ff;
           }
-          p {
-            background: linear-gradient(to right, #00b894, #00cec9);
+          p,pre {
+            background: linear-gradient(to right, #2a695c, #00cec9);
             -webkit-background-clip: text;
             color: transparent;
           }
@@ -51,7 +51,7 @@
 <body>
     <center>
         <header>
-            <h1>Welcome to ARKFUTURE</h1>
+            <h1>ARKFUTURE Guide Page</h1>
         </header>
     </center>
 
