--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 <!-- footer -->
 <footer>
     <center>
-        <p class="footer">&copy; ARKFUTURE & &copy; 方舟未来</p>
-        <p class="footer">&copy; ARKFUTURELAB|&copy; ARKFUTURESTUDIO|&copy; ARKFUTUREGROUP</p>
+        <p class="footer">方舟未来[工作室/实验室/集团]</p>
+        <p class="footer">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
     </center>
 </footer>
 
