--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -216,7 +216,9 @@
 
 <!-------------页脚-------> 
 <footer>
-    <p style="text-align: center;font-size: 1vw;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
-    <p style="text-align: center;font-size: 1vw;">方舟未来|实验室|工作室|团队/集团</p>
+    <center>
+        <p class="footer">方舟未来[工作室/实验室/集团]</p>
+        <p class="footer">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
+    </center>
 </footer>
 </html>
