--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -63,26 +63,15 @@
 <p id="11">tor搜索,11</p>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://ahmia.fi/search/" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="AHMIA">
+    <form action="http://tordexu73joywapk2txdr54jed4imqledpcvcuf75qsas2gwdgksvnyd.onion/search" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="TorDex">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://thehiddenwiki.org/" target="_blank">
-        <input type="text" name="s" size="30" autocomplete="off" placeholder="THEHIDDENWIKI">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://tor.link/" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="TOR.LINK">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-
-    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://onionengine.com/search.php" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="ONIONENGINE">
+    <form action="http://kn3hl4xwon63tc6hpjrwza2npb7d4w5yhbzq7jjewpfzyhsd65tm6dad.onion/search.php" target="_blank">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="tor2web.nl">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
@@ -90,6 +79,13 @@
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://onionlandsearchengine.net/search" target="_blank">
         <input type="text" name="search" size="30" autocomplete="off" placeholder="ONIONLANDSEARCHENGINE">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://tor.link/" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="TOR.LINK">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
