--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -56,7 +56,7 @@
     </form>
 
     <form action="http://kn3hl4xwon63tc6hpjrwza2npb7d4w5yhbzq7jjewpfzyhsd65tm6dad.onion/search.php" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="tor2web.nl">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="Tor2Web.nl">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
