--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -61,12 +61,12 @@
     </form>
 
     <form action="https://onionlandsearchengine.net/search" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="ONIONLANDSEARCHENGINE">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="ONIONLANDSEARCHENGINE">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
     <form action="https://tor.link/" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="TOR.LINK">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="TOR.LINK">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
