--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -55,8 +55,8 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="http://kn3hl4xwon63tc6hpjrwza2npb7d4w5yhbzq7jjewpfzyhsd65tm6dad.onion/search.php" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="Tor2Web.nl">
+    <form action="http://ondexcylxxxq6vcc62l3r2m6rypohvvymsvqeadhln5mjo73pf6ksjad.onion" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="OnDex">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
@@ -66,7 +66,7 @@
     </form>
 
     <form action="https://tor.link/" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="TOR.LINK">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="TOR.LINK">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
