--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -8,10 +8,10 @@
 </head>
 <!--------------------> 
 <body>
-<center><h1>ARKFUTURE快链，使用#定位</h1></center>
+<center><h1>ARKFUTURE快链</h1></center>
 <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
 <br>
-<h2 id="1">搜索引擎,1</h2>
+<h2>搜索引擎</h2>
 
     <form action="https://www.baidu.com/s" target="_blank">
         <input type="text" name="wd" size="30" autocomplete="off" placeholder="搜索(当前使用-Baidu)">
@@ -48,7 +48,7 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-<p id="11">tor搜索,11</p>
+<p>tor搜索</p>
 
     <form action="http://tordexu73joywapk2txdr54jed4imqledpcvcuf75qsas2gwdgksvnyd.onion/search" target="_blank">
         <input type="text" name="query" size="30" autocomplete="off" placeholder="TorDex">
@@ -70,7 +70,7 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-<p id="12">学术/论文搜索,12</p>
+<p>学术/论文搜索</p>
 
     <form action="https://www.scirp.org/journal/articles.aspx" target="_blank">
         <input type="text" name="searchcode" size="30" autocomplete="off" placeholder="Scirp/科研出版社">
@@ -88,7 +88,7 @@
     </form>
 
 <br>
-<h2 id="2">资产测绘平台(所有的都需要登录),2</h2>
+<h2>资产测绘平台(所有的都需要登录)</h2>
 
     <form action="https://www.cve.org/CVERecord" target="_blank">
         <input type="text" name="id" size="30" autocomplete="off" placeholder="通用漏洞披露/CVE">
@@ -116,7 +116,7 @@
     </form>
 
 <br>
-<h2 id="3">视频逃逸,3</h2>
+<h2>视频逃逸</h2>
 
     <form action="https://jx.jsonplayer.com/player/" target="_blank">
         <input type="text" name="url" size="30" autocomplete="off" placeholder="视频解析">
@@ -124,7 +124,7 @@
     </form>
 
 <br>
-<h2 id="4">英汉词典,4</h2>
+<h2>英汉词典</h2>
 
     <form action="https://www.iciba.com/word" target="_blank">
         <input type="text" name="w" size="30" autocomplete="off" placeholder="金山词霸">
