--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
     <center>
         <header>
             <h1>ARKFUTURE Guide Page</h1>
+            <h1>引导页</h1>
         </header>
     </center>
 
     <div>
-        <h1>About</h1>
+        <h1>关于|About</h1>
 
         <div>
             <h2>公约</h2>
@@ -83,7 +84,7 @@
     <br>
 
     <div>
-        <h1>Service</h1>
+        <h1>服务|Service</h1>
 
         <div></div>
         <h2>站点|WEB</h2>
@@ -127,7 +128,6 @@
         <h2>相关配置文件</h2>
         <a href="ARKFUTURE/Conky/">Conky配置文件</a>
         <a href="ARKFUTURE/IRC/">INSPIRCD配置文件</a>
-        <a href="ARKFUTURE/MPD/">MPD配置文件</a>
         <a href="ARKFUTURE/Suricata/">Suricata配置文件</a>
     </div>
     <br>
@@ -150,7 +150,7 @@
     <br>
 
     <div>
-        <h1>Link</h1>
+        <h1>链接|Link</h1>
         <p>这个条目是展示一些链接</p>
         <p>这些链接为随时随地使用而准备</p>
         <p>展示链接不代表我们跟某个团体或公司合作</p>
@@ -192,7 +192,7 @@
     <br>
 
     <div>
-        <h1>Licenses</h1>
+        <h1>许可证|Licenses</h1>
 
         <p>除了以上许可证，其他许可证我们也在使用，因为篇幅，我们不再写其他的了</p>
         <a href="https://www.gnu.org/licenses/">GNU开源许可</a>
@@ -202,7 +202,7 @@
     <br>
 
     <div>
-        <h1>END</h1>
+        <h1>结束语END</h1>
 
         <p>我们崇尚黑客精神</p>
         <pre>
