--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
         <br>
         <div>
-            <h2>私人DNS</h2>
+            <h2>私人DNS [复制使用]</h2>
             <p>DoT(DNS over TLS,仅限域名)</p>
             <a href="dns.alidns.com">阿里云 DoT</a>
             <a href="dot.pub">腾讯云 DoT</a>
@@ -202,7 +202,7 @@
     <br>
 
     <div>
-        <h1>结束语END</h1>
+        <h1>结束语|END</h1>
 
         <p>我们崇尚黑客精神</p>
         <pre>
