--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <!-- footer -->
 <footer>
     <center>
-        <p class="footer">方舟未来[工作室/实验室/集团]</p>
+        <p class="footer">方舟未来[实验室/工作室/集团]</p>
         <p class="footer">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
     </center>
 </footer>
