--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -95,13 +95,13 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://hunter.qianxin.com/list" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="鹰图">
+    <form action="https://x.threatbook.com/v5/generalSearch" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="微步在线">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
     <form action="https://quake.360.net/quake/#/searchResult" target="_blank">
-        <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360">
+        <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360夸克">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
