--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             -webkit-background-clip: text;
             color: transparent;
           }
+
+          body {
+            border: 2px solid wheat;
+            border-radius: 5px;
+            }
+
           
           
 
