--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div>
         <h2>其他项目</h2>
         <p>战队：qq飞车-骇客军团</p>
-        <p>社交媒体：搜索ARKFUTURE,特别标注的为我们</p>
+        <p>社交媒体：<a href="https://linktr.ee/arkfuture">ARKFUTURE 社交媒体</a></p>
     </div>
     </div>
 
