--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             color: transparent;
           }
 
+          .tit {
+            color: white;
+            background-color: black;
+          }
+
+
 
           
           
@@ -59,7 +65,7 @@
     </center>
 
     <div>
-        <h1>关于|About</h1>
+        <h1 class="tit">关于|About</h1>
 
         <div>
             <h2>公约</h2>
@@ -86,7 +92,7 @@
     <br>
 
     <div>
-        <h1>服务|Service</h1>
+        <h1 class="tit">服务|Service</h1>
 
         <div></div>
         <h2>站点|WEB</h2>
@@ -151,7 +157,7 @@
     <br>
 
     <div>
-        <h1>链接|Link</h1>
+        <h1 class="tit">链接|Link</h1>
         <p>这个条目是展示一些链接</p>
         <p>这些链接为随时随地使用而准备</p>
         <p>展示链接不代表我们跟某个团体或公司合作</p>
@@ -193,7 +199,7 @@
     <br>
 
     <div>
-        <h1>许可证|Licenses</h1>
+        <h1 class="tit">许可证|Licenses</h1>
 
         <a href="https://www.gnu.org/licenses/">GNU开源许可</a>
         <a href="https://creativecommons.org/licenses/">CC知识许可</a>
@@ -203,7 +209,7 @@
     <br>
 
     <div>
-        <h1>结束语|END</h1>
+        <h1 class="tit">结束语|END</h1>
 
         <p>我们崇尚黑客精神</p>
         <pre>
