--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
           a:hover {
             color: #0072ff;
           }
+          
           p,pre {
             background: linear-gradient(to right, #2a695c, #00cec9);
             -webkit-background-clip: text;
             color: transparent;
           }
+          
           .footer {
             background: black;
             -webkit-background-clip: text;
@@ -43,7 +45,7 @@
 
           .tit {
             color: white;
-            background-color: black;
+            background: linear-gradient(to bottom right, #ff6b6b, #5e71e0);
           }
 
 
