--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             <img src="https://www.hamqsl.com/solar101vhfper.php">
             <img src="https://www.hamqsl.com/solar101vhfpic.php">
             <img src="https://www.hamqsl.com/solarmuf.php">
+            <iframe src="https://discord.com/widget?id=1241212507461255210&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </center>
     </div>
 
