--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
             <h2>加入我们</h2>
             <li><a href="irc://irc.*:6667/#arkfuture_studio">IRC [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
-            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a>
-            </li>
+            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:pz5ef7gpx@mozmail.com">订阅邮件列表 [pz5ef7gpx@mozmail.com]</a></li>
+            <li><a>Discord ID :1241212507461255210</a></li>
+            <p>所有群信息均不同步，我们诚挚邀请您加入Telegram群</p>
         </div>
         <br>
         <div>
