--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <img src="https://www.hamqsl.com/solar101vhfper.php">
             <img src="https://www.hamqsl.com/solar101vhfpic.php">
             <img src="https://www.hamqsl.com/solarmuf.php">
-            <iframe src="https://discord.com/widget?id=1241212507461255210&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
         </center>
     </div>
 
@@ -224,6 +224,7 @@
         </pre>
         <p>我们也崇尚开源精神</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
+        <p>我们是一群追寻自己梦想的人</p>
 
     </div>
 
