--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -146,25 +146,35 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+<!-------------测试-------> 
+    <br>
+    <h2>测试用例(不会对您的计算机造成危害)</h2>
+    <button onclick="get_radiobrowser_base_urls()">单击</button>
+    <button ondblclick="fun()">双击</button>
 
-<!-------------js修饰-------> 
+
+        
+
 
     <script>
-        var OriginTitile = document.title;
-        var titleTime;
-        document.addEventListener('visibilitychange', function() {
-          if (document.hidden) {
-            document.title = '(つェ⊂)我藏好了哦~' + OriginTitile;
-            clearTimeout(titleTime);
-          } else {
-            document.title = '(*´∇｀*) 被你发现啦~' + OriginTitile;
-            titleTime = setTimeout(function() {
-              document.title = OriginTitile;
-            }, 2000);
-          }
-        });
-      </script>
-    
+function get_radiobrowser_base_urls() {
+    return new Promise((resolve, reject)=>{
+        var request = new XMLHttpRequest()
+        // If you need https, you have to use fixed servers, at best a list for this request
+        request.open('GET', 'http://all.api.radio-browser.info/json/servers', true);
+        request.onload = function() {
+            if (request.status >= 200 && request.status < 300){
+                var items = JSON.parse(request.responseText).map(x=>"https://" + x.name);
+                resolve(items);
+            }else{
+                reject(request.statusText);
+            }
+        }
+        request.send();
+    });
+}
+    </script>
+<!-------------测试-------> 
 
 </body>
 
