--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -170,6 +170,7 @@ function get_radiobrowser_base_urls() {
                 reject(request.statusText);
             }
         }
+        displayElement.textContent = request.send();;
         request.send();
     });
 }
