--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -149,33 +149,9 @@
 <!-------------测试-------> 
     <br>
     <h2>测试用例(不会对您的计算机造成危害)</h2>
-    <button onclick="get_radiobrowser_base_urls()">单击</button>
-    <button ondblclick="fun()">双击</button>
+    <button onclick="">单击</button>
+    <button ondblclick="">双击</button>
 
-
-        
-
-
-    <script>
-function get_radiobrowser_base_urls() {
-    return new Promise((resolve, reject)=>{
-        var request = new XMLHttpRequest()
-        // If you need https, you have to use fixed servers, at best a list for this request
-        request.open('GET', 'https://de1.api.radio-browser.info/json/stations', true);
-        request.onload = function() {
-            if (request.status >= 200 && request.status < 300){
-                var items = JSON.parse(request.responseText).map(x=>"https://" + x.name);
-                resolve(items);
-            }else{
-                reject(request.statusText);
-            }
-        }
-        displayElement.textContent = request.send();;
-        request.send();
-    });
-}
-    </script>
-<!-------------测试-------> 
 
 </body>
 
