--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
         <br>
         <div>
             <h2>加入我们</h2>
-            <li><a href="irc://irc.*:6667/#arkfuture_studio">IRC [#arkfuture_studio]</a></li>
+            <li><a href="irc://irc.rizon.net:6697/#arkfuture_studio">IRC [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:pz5ef7gpx@mozmail.com">订阅邮件列表 [pz5ef7gpx@mozmail.com]</a></li>
-            <li><a>Discord ID :1241212507461255210</a></li>
             <p>所有群信息均不同步，我们诚挚邀请您加入Telegram群</p>
         </div>
         <br>
@@ -233,8 +232,9 @@
 <!-- footer -->
 <footer>
     <center>
-        <p class="footer">方舟未来[实验室/工作室/集团]</p>
-        <p class="footer">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
+        <p class="footer">方舟未来|方舟未来集团|方舟未来工作室|方舟安全实验室</p>
+        <p class="footer">ARKFUTURE|ARKFUTURE GROUP|ARKFUTURE STUDIO</p>
+        <p class="footer">ARK SRCURITY LAB(Cyberspace Security|Hardware Security)</p>
     </center>
 </footer>
 
