--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@
 <footer>
     <center>
         <p class="footer">方舟未来|方舟未来集团|方舟未来工作室|方舟安全实验室</p>
-        <p class="footer">ARKFUTURE|ARKFUTURE GROUP|ARKFUTURE STUDIO</p>
-        <p class="footer">ARK SRCURITY LAB(Cyberspace Security|Hardware Security)</p>
+        <p class="footer">ARKFUTURE|ARKFUTURE GROUP|ARKFUTURE STUDIO|<a href="ARKFUTURE/RES/ASL.html">ARK SRCURITY LAB</a></p>
     </center>
 </footer>
 
