--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -118,8 +118,18 @@
 <br>
 <h2>视频逃逸</h2>
 
-    <form action="https://jx.jsonplayer.com/player/" target="_blank">
-        <input type="text" name="url" size="30" autocomplete="off" placeholder="视频解析">
+    <form action="https://jx.xmflv.com/" target="_blank">
+        <input type="text" name="url" size="30" autocomplete="off" placeholder="1">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    <form action="https://jx.playerjy.com/" target="_blank">
+        <input type="text" name="url" size="30" autocomplete="off" placeholder="3">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    <form action="https://jx.playerjy.com/" target="_blank">
+        <input type="text" name="jx" size="30" autocomplete="off" placeholder="特殊解析">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
