--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2>公约</h2>
             <p>您需阅读我们的公约以了解我们</p>
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解他们所说的要点。</p>
-            <a href="ARKFUTURE/RES/ARKFUTURE.pdf">ARKFUTURE公约 [ARKFUTURE.pdf]</a>
+            <a href="ARKFUTURE/RES/ARKFUTURE.md">ARKFUTURE公约 [ARKFUTURE.pdf]</a>
         </div>
         <br>
         <div>
