--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           }
 
           .tit {
-            color: white;
-            background: linear-gradient(to bottom right, #ff6b6b, #5e71e0);
+            color: purple;
           }
 
 
