--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <br>
+    <br><hr size=1 color=redwidth=300>
 
     <div>
         <h1 class="tit">服务|Service</h1>
@@ -156,7 +156,7 @@
         </center>
     </div>
 
-    <br>
+    <br><hr size=1 color=redwidth=300>
 
     <div>
         <h1 class="tit">链接|Link</h1>
@@ -198,7 +198,7 @@
         </div>
     </div>
 
-    <br>
+    <br><hr size=1 color=redwidth=300>
 
     <div>
         <h1 class="tit">许可证|Licenses</h1>
@@ -208,7 +208,7 @@
         <p>除了以上许可证，其他许可证我们也在使用，因为篇幅，我们不再写其他的了</p>
     </div>
 
-    <br>
+    <br><hr size=1 color=redwidth=300>
 
     <div>
         <h1 class="tit">结束语|END</h1>
