--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
         <br>
         <div>
             <h2>加入我们</h2>
-            <li><a href="irc://irc.rizon.net:6697/#arkfuture_studio">IRC [#arkfuture_studio]</a></li>
+            <li><a href="irc://待填写:6667/#arkfuture_studio">IRC-6667端口 [#arkfuture_studio]</a></li>
+            <li><a href="irc://待填写:6697/#arkfuture_studio">IRC-6697端口 [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
-            <li><a href="mailto:pz5ef7gpx@mozmail.com">订阅邮件列表 [pz5ef7gpx@mozmail.com]</a></li>
+            <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">订阅邮件列表 [ARKFUTURE@FOXMAIL.COM]</a></li>
             <p>所有群信息均不同步，我们诚挚邀请您加入Telegram群</p>
         </div>
         <br>
@@ -169,9 +170,10 @@
         <p>这个条目是展示一些链接</p>
         <p>这些链接为随时随地使用而准备</p>
         <p>展示链接不代表我们跟某个团体或公司合作</p>
+        <p>请右击->复制链接, 然后粘贴使用</p>
 
         <div>
-            <h2>所需</h2>
+            <h2>系统连接</h2>
             <a href="https://parrotsec.org">ParrotSec</a>
             <a href="https://blackarch.org">BlackArch</a>
             <a href="https://www.debian.org">Debian</a>
@@ -193,7 +195,7 @@
         </div>
         <br>
         <div>
-            <h2>私人DNS [复制使用]</h2>
+            <h2>私人DNS</h2>
             <p>DoT(DNS over TLS,仅限域名)</p>
             <a href="dns.alidns.com">阿里云 DoT</a>
             <a href="dot.pub">腾讯云 DoT</a>
