--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -158,7 +158,7 @@
 
 <!-------------测试,包括js-------> 
 document.getElementById('loadStations').addEventListener('click', function() {  
-    fetch('http://de1.api.radio-browser.info/xml/stations')  
+    fetch('http://at1.api.radio-browser.info/xml/stations')  
         .then(response => {  
             if (!response.ok) {  
                 throw new Error('Network response was not ok');  
