--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -164,6 +164,11 @@
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
 
+<form action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
+    <input type="text" name="name" size="30" autocomplete="off" placeholder="电台名字搜索">
+    <input type="submit" value="搜索"><i><--点击</i>
+</form>
+
 <form action="http://at1.api.radio-browser.info/xml/stations/byuuid "_blank">
     <input type="text" name="uuids" size="30" autocomplete="off" placeholder="uuid搜索">
     <input type="submit" value="搜索"><i><--点击</i>
