--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -165,7 +165,7 @@
 </form>
 
 <form action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
-    <input type="text" name="name" size="30" autocomplete="off" placeholder="电台名字搜索">
+    <input type="text" name="order" size="30" autocomplete="off" placeholder="混沌搜索(搜啥都行)">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
 
