--- a/index.html
+++ b/index.html
@@ -59,11 +59,28 @@
           
 
     </style>
+
+    <script>
+        var clockElement = document.getElementById('clock');  
+            function updateClock() {  
+                var now = new Date();  
+                var offset = 8;
+                var hours = (now.getUTCHours() + offset) % 24;
+                var minutes = now.getUTCMinutes();  
+                var seconds = now.getUTCSeconds();  
+                var milliseconds = now.getUTCMilliseconds();  
+                var formattedTime = `国家授时中心标准时间 ${now.getUTCFullYear()}-${('0' + (now.getUTCMonth() + 1)).slice(-2)}-${('0' + now.getUTCDate()).slice(-2)} ${('0' + hours).slice(-2)}:${('0' + minutes).slice(-2)}:${('0' + seconds).slice(-2)}:${('00' + milliseconds).slice(-3)}(UTC+08:00)`;  
+                clockElement.textContent = formattedTime;  
+            }  
+        updateClock();  
+        setInterval(updateClock, 1);
+    </script>
 </head>
 
 <!-- body -->
 
 <body>
+    <div id="clock"></div> 
     <center>
         <header>
             <h1>ARKFUTURE Guide Page</h1>
