--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
     white-space: nowrap;
     box-sizing: border-box;  
     position: relative;  
+    color: plum;
 }  
 .marquee-content {  
     display: inline-block;  
