--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     display: inline-block;  
     padding-left: 100%;
     animation: marquee 25s linear infinite;
-    color: plum;
+    color: red;
 }  
 @keyframes marquee {  
     from {  
