--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <!-- head -->
-
 <head>
     <title>ARKFUTURE</title>
     <meta charset="UTF-8">
@@ -12,17 +11,15 @@
 </head>
 
 <!-- body -->
-
 <body> 
+    <br>
     <center>
         <header>
             <h1>ARKFUTURE Guide Page</h1>
-
+            <br>
             <div class="marquee">  
                 <div class="marquee-content">  
-            
-                    当前：INSPIRCD4 正式启用啦，我们将使用INSPIRCD4来作为我们的IRC服务器
-            
+                    <p style="color: red;">当前：我们祝贺<a href="https://github.com/inspircd/inspircd/releases">INSPIRCD4</a>正式版本的发布,我们将INSPIRCD3版本转为INSPIRCD4来作为我们的IRC服务器</p>    
                 </div>  
             </div>  
         </header>
@@ -196,7 +193,7 @@
     </div>
 
 
-<!--JS及XSS-->
+<!--JS及XSS!!!!!!!!!!!!!!!!!!!!-->
 <script>
     var clockElement = document.getElementById('clock');  
         function updateClock() {  
@@ -272,7 +269,6 @@
     display: inline-block;  
     padding-left: 100%;
     animation: marquee 25s linear infinite;
-    color: red;
 }  
 @keyframes marquee {  
     from {  
@@ -283,8 +279,9 @@
     }  
 }
 </style>
-
+<!--JS及XSS的结束!!!!!!!!!!!!!!!!!!!!-->
 </body>
+<br>
 
 <!-- footer -->
 <footer>
