--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         <br>
         <div>
             <h2>加入我们</h2>
-            <li><a href="irc://待填写:6667/#arkfuture_studio">IRC-6667端口 [#arkfuture_studio]</a></li>
-            <li><a href="irc://待填写:6697/#arkfuture_studio">IRC-6697端口 [#arkfuture_studio]</a></li>
-            <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
+            <li><a href="irc://待填写:6667/#arkfuture_studio">IRC*-6667端口 [#arkfuture_studio]</a></li>
+            <li><a href="irc://待填写:6697/#arkfuture_studio">IRC*-6697端口 [#arkfuture_studio]</a></li>
+            <li><a href="https://t.me/arkfuture_studio">Telegram* [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">订阅邮件列表 [ARKFUTURE@FOXMAIL.COM]</a></li>
-            <p>所有群信息均不同步，主要使用Telegram群和IRC</p>
         </div>
         <br>
         <div>
