--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             var minutes = now.getUTCMinutes();  
             var seconds = now.getUTCSeconds();  
             var milliseconds = now.getUTCMilliseconds();  
-            var timestamp = `时间戳: ${new Date().getTime()}`;
-            var formattedTime = `时间: ${now.getUTCFullYear()}-${('0' + (now.getUTCMonth() + 1)).slice(-2)}-${('0' + now.getUTCDate()).slice(-2)} ${('0' + hours).slice(-2)}:${('0' + minutes).slice(-2)}:${('0' + seconds).slice(-2)}:${('00' + milliseconds).slice(-3)}(UTC+08:00) 时间戳: ${new Date().getTime()}`; 
+            var timestamp = `UNIX时间戳: ${new Date().getTime()}`;
+            var formattedTime = `UTC时间: ${now.getUTCFullYear()}-${('0' + (now.getUTCMonth() + 1)).slice(-2)}-${('0' + now.getUTCDate()).slice(-2)} ${('0' + hours).slice(-2)}:${('0' + minutes).slice(-2)}:${('0' + seconds).slice(-2)}:${('00' + milliseconds).slice(-3)} 时间戳: ${new Date().getTime()}`; 
             clockElement.textContent = timestamp; 
             clockElement.textContent = formattedTime; 
         }         
