--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
     <br>
     <div>
         <h2>相关配置文件</h2>
-        <a href="ARKFUTURE/Conky/">Conky配置文件</a>
-        <a href="ARKFUTURE/IRC/">INSPIRCD配置文件</a>
-        <a href="ARKFUTURE/Suricata/">Suricata配置文件</a>
+        <a href="ARKFUTURE/CONF/inspircd/inspircd.conf">INSPIRCD配置文件</a>
+        <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata配置文件</a>
     </div>
     <br>
     <div>
