--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 <footer>
     <center>
         <p class="footer">方舟未来|方舟未来集团|方舟未来工作室|方舟安全实验室</p>
-        <p class="footer"><a href="">ARKFUTURE</a>|<a href="">ARKFUTURE GROUP</a>|<a href="">ARKFUTURE STUDIO</a>|<a href="ARKFUTURE/RES/ASL.html">ARK SRCURITY LAB</a></p>
+        <p class="footer">Copyright © 2020-∞<a href="">ARKFUTURE</a>|<a href="">ARKFUTURE GROUP</a>|<a href="">ARKFUTURE STUDIO</a>|<a href="ARKFUTURE/RES/ASL.html">ARK SRCURITY LAB</a>.All rights reserved. <br>All trademarks are the property of their respective owners.</p>
     </center>
 </footer>
 
