更新index.html，修复链接并调整样式

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>ARKFUTURE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" type="text/css" href="">-->
-    <!--<script src=""></script>-->
+    <link rel="stylesheet" type="text/css" href="">
+    <style></style>
+    <script src=""></script>
 </head>
 
 <!-- body -->
@@ -19,7 +20,7 @@
             <br>
             <div class="marquee">  
                 <div class="marquee-content">  
-                    <p style="color: red;">当前：我们祝贺<a href="https://github.com/inspircd/inspircd/releases">INSPIRCD4</a>正式版本的发布,我们将INSPIRCD3版本转为INSPIRCD4来作为我们的IRC服务器</p>    
+                    <p style="color: red;">当前事件：我们祝贺<a href="https://github.com/inspircd/inspircd/releases">INSPIRCD4</a>正式版本的发布,并更新我们的IRC服务</p>    
                 </div>  
             </div>  
         </header>
@@ -288,5 +289,6 @@
         <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE GROUP</a>|<a href="">ARKFUTURE STUDIO</a>|<a href="ARKFUTURE/RES/ASL.html">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
     </center>
 </footer>
+
 
 </html>
