更新index.html，修复链接并调整样式

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <br>
     <div>
         <h2>相关配置文件</h2>
-        <a href="ARKFUTURE/CONF/inspircd/inspircd.conf">INSPIRCD配置文件</a>
+        <a href="ARKFUTURE/CONF/inspircd/1.sh">INSPIRCD配置文件</a>
         <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata配置文件</a>
     </div>
     <br>
