更新index.html，删除当前事件并添加新链接，调整配置文件链接

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
             <div class="marquee">  
                 <div class="marquee-content">  
-                    <p style="color: red;">当前事件：我们祝贺<a href="https://github.com/inspircd/inspircd/releases">INSPIRCD4</a>正式版本的发布,并更新我们的IRC服务</p>    
+                    <p style="color: red;">当前事件: 无</p>    
                 </div>  
             </div>  
         </header>
@@ -98,7 +98,9 @@
     <br>
     <div>
         <h2>相关配置文件</h2>
+        <a href="https://github.com/inspircd/inspircd/releases">INSPIRCD下载连接</a>
         <a href="ARKFUTURE/CONF/inspircd/1.sh">INSPIRCD配置文件</a>
+        <a href="https://github.com/OISF/suricata/releases/">Suricata下载连接</a>
         <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata配置文件</a>
     </div>
     <br>
