更新index.html，VPN服务使用SoftEtherVPN，添加SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
     <br>
     <div>
         <h2>代理|PROXY & VPN</h2>
-        <p>VPN服务使用OpenVpn</p>
+        <p>VPN使用SoftEtherVPN</p>
         <p>SOCKS5服务(代理), 端口:[5554]</p>
         <p>HTTP服务(代理), 端口:[5555]</p>
+        <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
         <a href="ARKFUTURE/RES/proxy.pac">proxy.pac脚本 [proxy.pac]</a>
     </div>
     <br>
