--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         </pre>
         <p>我们也崇尚开源精神</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
+        <p>INGO(国际非政府组织)&NPO(非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
 
     </div>
