更新index.html，修复快链链接并调整样式

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <br>
         <div>
             <h2>快速功能连接</h2>
-            <a href="ARKFUTURE/RES/fl.html">快链 [fl.html]</a>
+            <a href="ARKFUTURE/RES/fl.html" style="color: red;">快链 [fl.html]</a>
         </div>
     </div>
 
