更新ARKFUTURE/CONF/inspircd/releases，添加FRP链接，提供FRP下载信息

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <br>
     <div>
         <h2>相关配置文件</h2>
+        <a href="https://github.com/fatedier/frp/releases">FRP</a>
         <a href="https://github.com/inspircd/inspircd/releases">INSPIRCD下载连接</a>
         <a href="ARKFUTURE/CONF/inspircd/1.sh">INSPIRCD配置文件</a>
         <a href="https://github.com/OISF/suricata/releases/">Suricata下载连接</a>
