更新ARKFUTURE/index.html，简化页面布局，优化用户体验

--- a/index.html
+++ b/index.html
@@ -12,22 +12,8 @@
 </head>
 
 <!-- body -->
-<body> 
-    <br>
-    <center>
-        <header>
-            <h1>ARKFUTURE Guide Page</h1>
-            <br>
-            <div class="marquee">  
-                <div class="marquee-content">  
-                    <p style="color: red;">当前事件: 无</p>    
-                </div>  
-            </div>  
-        </header>
-    </center>
-
-    <br><hr>
-    
+<body>
+     <center><h1>ARKFUTURE</h1></center>
     <div>
         <h1 class="tit">关于|About</h1>
 
