--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <!-- body -->
 <body>
-     <center><h1>ARKFUTURE</h1></center>
+    <h1>ARKFUTURE</h1>
+
+     <br>
+
     <div>
         <h1 class="tit">关于|About</h1>
 
@@ -87,9 +90,8 @@
         <h2>相关配置文件</h2>
         <a href="https://github.com/fatedier/frp/releases">FRP下载连接</a>
         <a href="https://github.com/inspircd/inspircd/releases">INSPIRCD下载连接</a>
-        <a href="ARKFUTURE/CONF/inspircd/2.sh">INSPIRCD配置文件</a>
+        <a href="ARKFUTURE/CONF/inspircd/2.sh">INSPIRCD配置脚本</a>
         <a href="https://github.com/OISF/suricata/releases/">Suricata下载连接</a>
-        <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata配置文件</a>
     </div>
     <br>
     <div>
@@ -248,27 +250,7 @@
         border-bottom: 1px dotted;
         color: #fcb045;
     }
-    /* 跑马灯 */  
-.marquee {  
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    box-sizing: border-box;  
-    position: relative;  
-}  
-.marquee-content {  
-    display: inline-block;  
-    padding-left: 100%;
-    animation: marquee 25s linear infinite;
-}  
-@keyframes marquee {  
-    from {  
-        transform: translateX(0);  
-    }  
-    to {  
-        transform: translateX(-100%);
-    }  
-}
+
 </style>
 <!--JS及XSS的结束!!!!!!!!!!!!!!!!!!!!-->
 </body>
@@ -278,7 +260,7 @@
 <footer>
     <center>
         <p class="footer">方舟未来|方舟未来集团|方舟未来工作室|方舟安全实验室</p>
-        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE GROUP</a>|<a href="">ARKFUTURE STUDIO</a>|<a href="ARKFUTURE/RES/ASL.html">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
+        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a>|<a href="">ARKFUTURE GROUP</a>|<a href="">ARKFUTURE STUDIO</a>|<a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
     </center>
 </footer>
 
