--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 <!-- body -->
 <body>
-    <h1>ARKFUTURE</h1>
+    <center><h1>ARKFUTURE</h1></center>
 
-     <br>
 
     <div>
         <h1 class="tit">关于|About</h1>
