更新ARKFUTURE/RES/ASL.html，删除无效页面，优化资源管理

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <br>
         <div>
             <h2>快速功能连接</h2>
-            <a href="ARKFUTURE/RES/fl.html" style="color: red;">快链 [fl.html]</a>
+            <a href="ARKFUTURE/RES/fl.html">快链 [fl.html]</a>
         </div>
     </div>
 
@@ -59,18 +59,13 @@
         <p>HTTP服务(代理), 端口:[5555]</p>
         <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
         <a href="ARKFUTURE/RES/proxy.pac">proxy.pac脚本 [proxy.pac]</a>
+        <p>内网地址说明:x.x.x.1为路由器地址|x.x.x.2为服务器地址,其它地址不作为主要地址使用</p>
     </div>
     <br>
     <div>
         <h2>资源库|RES</h2>
         <p>获取我们的内部资源(书/项目/文献等资源列表)</p>
         <a href="ARKFUTURE/RES/rel.csv">csv列表文件 [rel.csv]</a>
-    </div>
-    <br>
-    <div>
-        <h2>日历/计划|CALDAV</h2>
-        <p>查看我们近期的计划，或者参与到计划中来(计划项目/活动等)</p>
-        <a href="ARKFUTURE/RES/cal.ics">ics日历文件 [cal.ics]</a>
     </div>
     <br>
     <div>
@@ -87,10 +82,8 @@
     <br>
     <div>
         <h2>相关配置文件</h2>
-        <a href="https://github.com/fatedier/frp/releases">FRP下载连接</a>
-        <a href="https://github.com/inspircd/inspircd/releases">INSPIRCD下载连接</a>
         <a href="ARKFUTURE/CONF/inspircd/2.sh">INSPIRCD配置脚本</a>
-        <a href="https://github.com/OISF/suricata/releases/">Suricata下载连接</a>
+        <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata6x配置文件</a>
     </div>
     <br>
     <div>
