更新ARKFUTURE/RES/index.html，修正通信方式链接，优化资源管理

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <br>
         <div>
             <h2>加入我们</h2>
-            <li><a href="irc://待填写:6667/#arkfuture_studio">IRC*-6667至6669端口端口 [#arkfuture_studio]</a></li>
-            <li><a href="irc://待填写:6697/#arkfuture_studio">IRC*-6697端口 [#arkfuture_studio]</a></li>
-            <li><a href="https://t.me/arkfuture_studio">Telegram* [arkfuture_studio]</a></li>
+            <li><a href="irc://待填写:6667/#arkfuture_studio">IRC-6667至6669端口端口 [#arkfuture_studio]</a></li>
+            <li><a href="irc://待填写:6697/#arkfuture_studio">IRC-6697端口 [#arkfuture_studio]</a></li>
+            <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">订阅邮件列表 [ARKFUTURE@FOXMAIL.COM]</a></li>
         </div>
         <br>
         <div>
             <h2>快速功能连接</h2>
-            <a href="ARKFUTURE/RES/fl.html">快链 [fl.html]</a>
+            <a href="ARKFUTURE/RES/fl.html">[fl.html]</a>
         </div>
     </div>
 
