更新ARKFUTURE/RES/index.html，修正代理描述，优化用户体验

--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
     <div>
         <h2>代理|PROXY & VPN</h2>
         <p>VPN使用SoftEtherVPN</p>
-        <p>SOCKS5服务(代理), 端口:[5554]</p>
-        <p>HTTP服务(代理), 端口:[5555]</p>
         <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
+        <p>固定内网地址:x.x.x.1为路由器地址|x.x.x.2为服务器地址</p>
         <a href="ARKFUTURE/RES/proxy.pac">proxy.pac脚本 [proxy.pac]</a>
-        <p>内网地址说明:x.x.x.1为路由器地址|x.x.x.2为服务器地址,其它地址不作为主要地址使用</p>
     </div>
     <br>
     <div>
@@ -221,7 +219,7 @@
     }
       
     p,pre {
-        background: linear-gradient(to right, #2a695c, #00cec9);
+        background: #3c9291;
         -webkit-background-clip: text;
         color: transparent;
     }
