--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div>
         <h2>相关配置文件</h2>
         <p>配置文件中所有密码为 123456,请及时修改</p>
-        <a href="ARKFUTURE/CONF/inspircd/2.sh">INSPIRCD配置脚本</a>
+        <a href="ARKFUTURE/CONF/inspircd/1.sh">IRCD 下载脚本</a>
         <a href="ARKFUTURE/CONF/suricata/suricata.yaml">Suricata6x配置文件</a>
         <a href="ARKFUTURE/CONF/minecraft/server.properties">Minecraft配置文件</a>
     </div>
