--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <br>
         <div>
             <h2>加入我们</h2>
-            <li><a href="irc://待填写:6667/#arkfuture_studio">IRC-6667至6669端口端口 [#arkfuture_studio]</a></li>
-            <li><a href="irc://待填写:6697/#arkfuture_studio">IRC-6697端口 [#arkfuture_studio]</a></li>
+            <li><a href="#irc">IRC [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">订阅邮件列表 [ARKFUTURE@FOXMAIL.COM]</a></li>
@@ -72,10 +71,11 @@
     </div>
     <br>
     <div>
-        <h2>聊天|IRC</h2>
+        <h2 id="irc">聊天|IRC</h2>
         <p>默认端口连接不上请切换备用端口连接</p>
-        <p>非加密端口号,默认端口使用[6667]; 备用端口[6668],[6669]</p>
-        <p>加密端口号,默认端口使用[6697]; 备用端口[6679]</p>
+        <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
+        <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
+        <a href="irc://afeirc.yun.ink:6669/#arkfuture_studio">点击加入群聊[#arkfuture_studio]</a></li>
     </div>
     <br>
     <div>
